tests/NormalTests/paczka1/fuzzy1/58044912.err
Error in line 1: 3Ny S439 56,6
Error in line 6: pix1j7R4 A895 1997,5
Error in line 21: S439 A895 43,6
Error in line 37: S439°A895°78,8
Error in line 35: S439 S439 30,7
